# neuronpedia

./: .env.localhost  .nocustomca  Makefile  README.md  docker-compose.autointerp.dev.yaml  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: inference-tests.yml  semantic-versioning-release.yml
apps/autointerp/: Dockerfile  README.md  pyproject.toml  server.py
apps/graph/: Dockerfile  README.md  pyproject.toml  start.py
apps/graph/neuronpedia_graph/: server.py
apps/graph/runpod/: rp_handler.py
apps/graph/runpod-gemma-2-2b/: pyproject.toml  rp_handler.py
apps/graph/runpod-qwen3-4b/: Dockerfile  qwen3-4b.yaml  rp_handler.py  test_input.json
apps/inference/: Dockerfile  Makefile  README.md  pyproject.toml  test_request.py
apps/inference-v2/: .gitignore  Makefile  README.md  curl-examples.sh  pyproject.toml  pytest.ini  start.py
apps/inference-v2/neuronpedia_inference/: config.py  server.py  utils.py
apps/inference-v2/neuronpedia_inference/endpoints/: chat_completion.py  dataclasses.py  steer_utils.py
apps/inference-v2/tests/: README.md  conftest.py  test_chat_completion_integration.py  test_chat_completion_unit.py
apps/inference-v2/tests/data/: gemma_2_2b_it_dog_vector.py
apps/webapp/: Dockerfile  db-init.sh  init.sh  middleware.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js
docker/: compose.autointerp.dev.yaml  compose.graph.dev.yaml  compose.graph.gpu.yaml  compose.hf-cache.yaml  compose.inference.dev.yaml  compose.webapp.dev.yaml  compose.webapp.test.yaml  compose.yaml  docker-compose.yaml
docs/: DOCKER.md  K8S.md
k8s/: README.md
k8s/base/: kustomization.yaml
schemas/: README.md
utils/neuronpedia-utils/: README.md  (+1 more)
(+244 files in other folders)
